@@ -1,22 +1,24 @@
 package nl.remcoder.adventofcode;
 
+import nl.remcoder.adventofcode.library.BiAdventOfCodeSolution;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class Day20 {
-    public long handlePart1(Stream<String> input) {
-        List<String> lines = input.collect(Collectors.toList());
+public class Day20 implements BiAdventOfCodeSolution<Long, Integer> {
+    @Override
+    public Long handlePart1(Stream<String> input) {
+        var lines = input.toList();
 
-        List<Tile> tiles = new ArrayList<>();
+        var tiles = new ArrayList<Tile>();
 
-        for (int position = 0; position < lines.size(); position += 12) {
-            String tileIdLine = lines.get(position);
-            int id = Integer.parseInt(tileIdLine.substring(5, tileIdLine.length() - 1));
-            char[][] image = new char[10][];
-            for (int i = 0; i < 10; i++) {
+        for (var position = 0; position < lines.size(); position += 12) {
+            var tileIdLine = lines.get(position);
+            var id = Integer.parseInt(tileIdLine.substring(5, tileIdLine.length() - 1));
+            var image = new char[10][];
+            for (var i = 0; i < 10; i++) {
                 image[i] = lines.get(position + 1 + i).toCharArray();
                 image[i] = lines.get(position + 1 + i).toCharArray();
             }
@@ -24,14 +26,14 @@ public class Day20 {
             tiles.add(new Tile(id, image));
         }
 
-        List<Tile> cornerTiles = new ArrayList<>();
+        var cornerTiles = new ArrayList<Tile>();
 
-        for (Tile tile : tiles) {
-            long maxTilesMatch = tiles.stream()
-                                      .filter(otherTile -> tile != otherTile)
-                                      .map(tile::getMatchingEdge)
-                                      .filter(edge -> edge != Edge.NONE)
-                                      .count();
+        for (var tile : tiles) {
+            var maxTilesMatch = tiles.stream()
+                                     .filter(otherTile -> tile != otherTile)
+                                     .map(tile::getMatchingEdge)
+                                     .filter(edge -> edge != Edge.NONE)
+                                     .count();
 
             if (maxTilesMatch == 2) {
                 cornerTiles.add(tile);
@@ -45,19 +47,20 @@ public class Day20 {
         return cornerTiles.stream()
                           .mapToLong(Tile::getId)
                           .reduce((left, right) -> left * right)
-                          .getAsLong();
+                          .orElseThrow(() -> new AssertionError("Eek!"));
     }
 
-    public int handlePart2(Stream<String> input) {
-        List<String> lines = input.collect(Collectors.toList());
+    @Override
+    public Integer handlePart2(Stream<String> input) {
+        var lines = input.toList();
 
-        List<Tile> tiles = new ArrayList<>();
+        var tiles = new ArrayList<Tile>();
 
-        for (int position = 0; position < lines.size(); position += 12) {
-            String tileIdLine = lines.get(position);
-            int id = Integer.parseInt(tileIdLine.substring(5, tileIdLine.length() - 1));
-            char[][] image = new char[10][];
-            for (int i = 0; i < 10; i++) {
+        for (var position = 0; position < lines.size(); position += 12) {
+            var tileIdLine = lines.get(position);
+            var id = Integer.parseInt(tileIdLine.substring(5, tileIdLine.length() - 1));
+            var image = new char[10][];
+            for (var i = 0; i < 10; i++) {
                 image[i] = lines.get(position + 1 + i).toCharArray();
                 image[i] = lines.get(position + 1 + i).toCharArray();
             }
@@ -65,24 +68,24 @@ public class Day20 {
             tiles.add(new Tile(id, image));
         }
 
-        List<Tile> cornerTiles = new ArrayList<>();
+        var cornerTiles = new ArrayList<Tile>();
 
-        for (Tile tile : tiles) {
-            List<Edge> foundEdges = tiles.stream()
-                                         .filter(otherTile -> tile != otherTile)
-                                         .map(tile::getMatchingEdge)
-                                         .filter(edge -> edge != Edge.NONE)
-                                         .collect(Collectors.toList());
+        for (var tile : tiles) {
+            var foundEdges = tiles.stream()
+                                  .filter(otherTile -> tile != otherTile)
+                                  .map(tile::getMatchingEdge)
+                                  .filter(edge -> edge != Edge.NONE)
+                                  .toList();
 
             if (foundEdges.size() == 2) {
                 cornerTiles.add(tile);
             }
         }
 
-        int tempImageSize = (int) (Math.sqrt(tiles.size()) * 10);
-        int finalImageSize = (int) (Math.sqrt(tiles.size()) * 8);
+        var tempImageSize = (int) (Math.sqrt(tiles.size()) * 10);
+        var finalImageSize = (int) (Math.sqrt(tiles.size()) * 8);
 
-        Tile currentLeftEdgeTile = cornerTiles.get(0);
+        var currentLeftEdgeTile = cornerTiles.get(0);
 
         tiles.remove(currentLeftEdgeTile);
 
@@ -90,20 +93,18 @@ public class Day20 {
             currentLeftEdgeTile.flipUpsideDown();
         }
 
-        char[][] tempImage = new char[tempImageSize][tempImageSize];
+        var tempImage = new char[tempImageSize][tempImageSize];
 
-        for (int y = 0; y < currentLeftEdgeTile.image.length; y++) {
-            for (int x = 0; x < currentLeftEdgeTile.image.length; x++) {
-                tempImage[y][x] = currentLeftEdgeTile.image[y][x];
-            }
+        for (var y = 0; y < currentLeftEdgeTile.image.length; y++) {
+            System.arraycopy(currentLeftEdgeTile.image[y], 0, tempImage[y], 0, currentLeftEdgeTile.image.length);
         }
 
-        int y = 0;
-        int x = 10;
+        var y = 0;
+        var x = 10;
 
         cornerTiles.remove(currentLeftEdgeTile);
 
-        Tile previousTile = currentLeftEdgeTile;
+        var previousTile = currentLeftEdgeTile;
 
         while (!tiles.isEmpty()) {
             Tile nextTile;
@@ -114,7 +115,7 @@ public class Day20 {
                 } else {
                     nextTile = previousTile.rightTile;
                 }
-                Edge edge = nextTile.determineBorder(previousTile.rightBorder);
+                var edge = nextTile.determineBorder(previousTile.rightBorder);
 
                 switch (edge) {
                     case TOP -> {
@@ -123,9 +124,7 @@ public class Day20 {
                     }
                     case RIGHT -> nextTile.flipLeftRight();
                     case BOTTOM -> nextTile.rotateRight();
-                    case REVERSE_TOP -> {
-                        nextTile.rotateLeft();
-                    }
+                    case REVERSE_TOP -> nextTile.rotateLeft();
                     case REVERSE_RIGHT -> {
                         nextTile.flipUpsideDown();
                         nextTile.flipLeftRight();
@@ -137,18 +136,17 @@ public class Day20 {
                     case REVERSE_LEFT -> nextTile.flipUpsideDown();
                 }
             } else {
-                Edge edge;
                 if (currentLeftEdgeTile.bottomTile != null) {
                     nextTile = currentLeftEdgeTile.bottomTile;
                 } else {
                     nextTile = currentLeftEdgeTile.reverseBottomTile;
                 }
-                edge = nextTile.determineBorder(currentLeftEdgeTile.bottomBorder);
+                var edge = nextTile.determineBorder(currentLeftEdgeTile.bottomBorder);
 
                 switch (edge) {
                     case RIGHT -> nextTile.rotateLeft();
                     case BOTTOM -> nextTile.flipUpsideDown();
-                    case LEFT -> {
+                    case LEFT, REVERSE_LEFT -> {
                         nextTile.rotateRight();
                         nextTile.flipLeftRight();
                     }
@@ -161,40 +159,32 @@ public class Day20 {
                         nextTile.flipUpsideDown();
                         nextTile.flipLeftRight();
                     }
-                    case REVERSE_LEFT -> {
-                        nextTile.rotateRight();
-                        nextTile.flipLeftRight();
-                    }
                 }
                 currentLeftEdgeTile = nextTile;
                 y += 10;
                 x = 0;
             }
 
-            for (int y1 = 0; y1 < nextTile.image.length; y1++) {
-                for (int x1 = 0; x1 < nextTile.image.length; x1++) {
-                    tempImage[y1 + y][x1 + x] = nextTile.image[y1][x1];
-                }
+            for (var y1 = 0; y1 < nextTile.image.length; y1++) {
+                System.arraycopy(nextTile.image[y1], 0, tempImage[y1 + y], x, nextTile.image.length);
             }
 
             x += 10;
 
             tiles.remove(nextTile);
             previousTile = nextTile;
-
-//            printImage(tempImage);
         }
 
-        int finalY = 0;
-        int finalX = 0;
+        var finalY = 0;
+        var finalX = 0;
 
-        char[][] finalImage = new char[finalImageSize][finalImageSize];
+        var finalImage = new char[finalImageSize][finalImageSize];
 
-        for (int tempY = 0; tempY < tempImageSize; tempY++) {
+        for (var tempY = 0; tempY < tempImageSize; tempY++) {
             if (tempY % 10 == 0 || tempY % 10 == 9) {
                 continue;
             }
-            for (int tempX = 0; tempX < tempImageSize; tempX++) {
+            for (var tempX = 0; tempX < tempImageSize; tempX++) {
                 if (tempX % 10 == 0 || tempX % 10 == 9) {
                     continue;
                 }
@@ -204,115 +194,67 @@ public class Day20 {
             finalY++;
         }
 
-//        printImage(finalImage);
 
-        int amountOfMonsters = countMonstersInImage(finalImage);
-
-        if (amountOfMonsters == 0) {
+        if (doesImageNotContainMonster(finalImage)) {
             finalImage = rotateRight(finalImage);
-//            System.out.println("Rotated right 90");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
+            if (doesImageNotContainMonster(finalImage)) {
+                finalImage = rotateRight(finalImage);
+                if (doesImageNotContainMonster(finalImage)) {
+                    finalImage = rotateRight(finalImage);
+                    if (doesImageNotContainMonster(finalImage)) {
+                        finalImage = rotateRight(finalImage);
+                        finalImage = flipUpsideDown(finalImage);
+                        if (doesImageNotContainMonster(finalImage)) {
+                            finalImage = rotateRight(finalImage);
+                            if (doesImageNotContainMonster(finalImage)) {
+                                finalImage = rotateRight(finalImage);
+                                if (doesImageNotContainMonster(finalImage)) {
+                                    finalImage = rotateRight(finalImage);
+                                    if (doesImageNotContainMonster(finalImage)) {
+                                        finalImage = rotateRight(finalImage);
+                                        finalImage = flipUpsideDown(finalImage);
+                                        finalImage = reverseArray(finalImage);
+                                        if (doesImageNotContainMonster(finalImage)) {
+                                            finalImage = rotateRight(finalImage);
+                                            if (doesImageNotContainMonster(finalImage)) {
+                                                finalImage = rotateRight(finalImage);
+                                                if (doesImageNotContainMonster(finalImage)) {
+                                                    finalImage = rotateRight(finalImage);
+                                                    if (doesImageNotContainMonster(finalImage)) {
+                                                        finalImage = rotateRight(finalImage);
+                                                        finalImage = flipUpsideDown(finalImage);
+                                                        if (doesImageNotContainMonster(finalImage)) {
+                                                            finalImage = rotateRight(finalImage);
+                                                            if (doesImageNotContainMonster(finalImage)) {
+                                                                finalImage = rotateRight(finalImage);
+                                                                if (doesImageNotContainMonster(finalImage)) {
+                                                                    finalImage = rotateRight(finalImage);
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Rotated right 180");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Rotated right 270");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-            finalImage = flipUpsideDown(finalImage);
-//            System.out.println("Flipped upside down");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and rotated right 90");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and rotated right 180");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and rotated right 270");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-            finalImage = flipUpsideDown(finalImage);
-            finalImage = flipLeftRight(finalImage);
-//            System.out.println("Flipped left right");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped left right down and rotated right 90");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped left right and rotated right 180");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped left right and rotated right 270");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-            finalImage = flipUpsideDown(finalImage);
-//            System.out.println("Flipped upside down and left right");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and left right and rotated right 90");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and left right and rotated right 180");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-        if (amountOfMonsters == 0) {
-            finalImage = rotateRight(finalImage);
-//            System.out.println("Flipped upside down and left right and rotated right 270");
-//            printImage(finalImage);
-            amountOfMonsters = countMonstersInImage(finalImage);
-        }
-
-        printImage(finalImage);
-
+        
+        markMonsters(finalImage);
+        
         return countSeaRoughness(finalImage);
     }
 
     private int countSeaRoughness(char[][] image) {
-        int amountOfWaves = 0;
+        var amountOfWaves = 0;
 
-        for (char[] line : image) {
-            for (char pixel : line) {
+        for (var line : image) {
+            for (var pixel : line) {
                 if (pixel == '#') {
                     amountOfWaves++;
                 }
@@ -322,11 +264,34 @@ public class Day20 {
         return amountOfWaves;
     }
 
-    private int countMonstersInImage(char[][] finalImage) {
-        int amountOfMonsters = 0;
+    private boolean doesImageNotContainMonster(char[][] finalImage) {
+        for (var yForMonster = 0; yForMonster < finalImage.length - 3; yForMonster++) {
+            for (var xForMonster = 0; xForMonster < finalImage.length - 20; xForMonster++) {
+                if (finalImage[yForMonster][xForMonster + 18] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 5] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 6] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 11] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 12] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 17] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 18] == '#' &&
+                    finalImage[yForMonster + 1][xForMonster + 19] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 1] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 4] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 7] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 10] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 13] == '#' &&
+                    finalImage[yForMonster + 2][xForMonster + 16] == '#') {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
 
-        for (int yForMonster = 0; yForMonster < finalImage.length - 3; yForMonster++) {
-            for (int xForMonster = 0; xForMonster < finalImage.length - 20; xForMonster++) {
+    private void markMonsters(char[][] finalImage) {
+        for (var yForMonster = 0; yForMonster < finalImage.length - 3; yForMonster++) {
+            for (var xForMonster = 0; xForMonster < finalImage.length - 20; xForMonster++) {
                 if (finalImage[yForMonster][xForMonster + 18] == '#' &&
                     finalImage[yForMonster + 1][xForMonster] == '#' &&
                     finalImage[yForMonster + 1][xForMonster + 5] == '#' &&
@@ -358,12 +323,9 @@ public class Day20 {
                     finalImage[yForMonster + 2][xForMonster + 10] = 'O';
                     finalImage[yForMonster + 2][xForMonster + 13] = 'O';
                     finalImage[yForMonster + 2][xForMonster + 16] = 'O';
-
-                    amountOfMonsters++;
                 }
             }
         }
-        return amountOfMonsters;
     }
 
     private static class Tile {
@@ -385,7 +347,7 @@ public class Day20 {
         private Tile reverseRightTile;
         private Tile reverseBottomTile;
         private Tile reverseLeftTile;
-        private List<Tile> edgeTiles = new ArrayList<>();
+        private final List<Tile> edgeTiles = new ArrayList<>();
 
         private Tile(int id, char[][] image) {
             this.id = id;
@@ -461,12 +423,12 @@ public class Day20 {
         }
 
         public void rotateRight() {
-            image = rotateRight(image);
+            image = Day20.rotateRight(image);
             redetermineBorders();
         }
 
         public void rotateLeft() {
-            image = rotateLeft(this.image);
+            image = Day20.rotateLeft(this.image);
             redetermineBorders();
         }
 
@@ -564,63 +526,20 @@ public class Day20 {
                 }
                 if (borderMatches(tile, reverseLeftBorder)) {
                     reverseLeftTile = tile;
-                    continue;
                 }
             }
-        }
-
-        private char[][] rotateRight(char[][] image) {
-            int size = image.length;
-            char[][] ret = new char[size][size];
-
-            for (int i = 0; i < size; ++i) {
-                for (int j = 0; j < size; ++j) {
-                    ret[i][j] = image[size - j - 1][i];
-                }
-            }
-
-            return ret;
-        }
-
-        private char[][] rotateLeft(char[][] image) {
-            int size = image.length;
-            char[][] ret = new char[size][size];
-
-            for (int i = 0; i < size; ++i) {
-                for (int j = 0; j < size; ++j) {
-                    ret[i][j] = image[j][size - i - 1];
-                }
-            }
-
-            return ret;
-        }
-
-        private char[] reverseArray(char[] array) {
-            char[] newArray = new char[array.length];
-            for (int i = 0; i < array.length; i++) {
-                newArray[i] = array[array.length - 1 - i];
-            }
-            return newArray;
-        }
-
-        private char[][] reverseArray(char[][] array) {
-            char[][] newArray = new char[array.length][];
-            for (int i = 0; i < array.length; i++) {
-                newArray[i] = array[array.length - 1 - i];
-            }
-            return newArray;
         }
     }
 
-    private char[][] flipLeftRight(char[][] image) {
-        for (int position = 0; position < image.length; position++) {
-            image[position] = reverseArray(image[position]);
+    private static char[][] reverseArray(char[][] array) {
+        char[][] newArray = new char[array.length][];
+        for (int i = 0; i < array.length; i++) {
+            newArray[i] = array[array.length - 1 - i];
         }
-
-        return image;
+        return newArray;
     }
-
-    private char[] reverseArray(char[] array) {
+    
+    private static char[] reverseArray(char[] array) {
         char[] newArray = new char[array.length];
         for (int i = 0; i < array.length; i++) {
             newArray[i] = array[array.length - 1 - i];
@@ -629,19 +548,19 @@ public class Day20 {
     }
 
     private char[][] flipUpsideDown(char[][] image) {
-        char[][] newArray = new char[image.length][];
-        for (int i = 0; i < image.length; i++) {
+        var newArray = new char[image.length][];
+        for (var i = 0; i < image.length; i++) {
             newArray[i] = image[image.length - 1 - i];
         }
         return newArray;
     }
 
-    private char[][] rotateRight(char[][] image) {
-        int size = image.length;
-        char[][] ret = new char[size][size];
+    private static char[][] rotateRight(char[][] image) {
+        var size = image.length;
+        var ret = new char[size][size];
 
-        for (int i = 0; i < size; ++i) {
-            for (int j = 0; j < size; ++j) {
+        for (var i = 0; i < size; ++i) {
+            for (var j = 0; j < size; ++j) {
                 ret[i][j] = image[size - j - 1][i];
             }
         }
@@ -649,27 +568,17 @@ public class Day20 {
         return ret;
     }
 
-    private char[][] rotateLeft(char[][] image) {
-        int size = image.length;
-        char[][] ret = new char[size][size];
+    private static char[][] rotateLeft(char[][] image) {
+        var size = image.length;
+        var ret = new char[size][size];
 
-        for (int i = 0; i < size; ++i) {
-            for (int j = 0; j < size; ++j) {
+        for (var i = 0; i < size; ++i) {
+            for (var j = 0; j < size; ++j) {
                 ret[i][j] = image[j][size - i - 1];
             }
         }
 
         return ret;
-    }
-
-    public void printImage(char[][] image) {
-        System.out.println("Image state: ");
-        for (char[] line : image) {
-            for (char pixel : line) {
-                System.out.print(pixel);
-            }
-            System.out.println();
-        }
     }
 
     private enum Edge {
